--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-zz<!-- Navigation Bar -->
+<!-- Navigation Bar -->
 <nav>
     <div class="logo">
         <img src="logo.jpg" alt="College Sports Hub Logo">
