--- a/login.html
+++ b/login.html
@@ -111,15 +111,16 @@
     <div class="form-box login active">
         <h2>Login</h2>
         <form id="loginForm">
-            <label for="login-username">Username</label>
-            <input type="text" id="login-username" required>
-
-            <label for="login-password">Password</label>
-            <input type="password" id="login-password" required>
-
-            <p class="error" id="login-error"></p>
-
-            <input type="submit" value="Login">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+            <p class="mt-3">Don't have an account? <a href="register.html">Register here</a></p>
         </form>
         <div class="toggle-links">
             <p>Forgot Password? <a href="#" onclick="toggleForms('forgot-password')">Click Here</a></p>
@@ -321,27 +322,27 @@
     // Login Form
     document.getElementById("loginForm").addEventListener("submit", function(event) {
         event.preventDefault();
-        let username = document.getElementById("login-username").value.trim();
-        let password = document.getElementById("login-password").value;
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
         let users = getUsers();
         let errorElement = document.getElementById("login-error");
 
         errorElement.textContent = "";
 
-        if (users[username] && users[username].password === password) {
-            localStorage.setItem("loggedInUser", username);
+        if (users[email] && users[email].password === password) {
+            localStorage.setItem("loggedInUser", email);
             // Store userData for booking and details pages
             localStorage.setItem("userData", JSON.stringify({
-                username: username,
-                email: users[username].email,
-                phone: users[username].phone,
-                rollNo: users[username].rollno,
-                name: users[username].fullname,
-                studentType: users[username].studentType
+                username: email,
+                email: users[email].email,
+                phone: users[email].phone,
+                rollNo: users[email].rollno,
+                name: users[email].fullname,
+                studentType: users[email].studentType
             }));
             window.location.href = "index.html";
         } else {
-            errorElement.textContent = "Invalid username or password!";
+            errorElement.textContent = "Invalid email or password!";
         }
     });
 
