--- a/booking.html
+++ b/booking.html
@@ -854,30 +854,38 @@
     </script>
 </head>
 <body onload="checkLogin()">
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <img src="logo.jpg" alt="College Sports Hub Logo">
-        </div>
-        <div class="hamburger" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <ul class="main-nav" id="mainNav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="booking.html" class="active">Slot Booking</a></li>
-            <li><a href="team.html">Find a Team</a></li>
-            <li><a href="tournaments.html">Tournaments</a></li>
-            <li><a href="rules.html">Rules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="details.html">Details</a></li>
-            <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
-        </ul>
-    </nav>
-    <div id="nav-backdrop"></div>
-
+<div id="nav-placeholder"></div>
+<script>
+fetch('nav.html')
+  .then(r => r.text())
+  .then(d => {
+    document.getElementById('nav-placeholder').innerHTML = d;
+    // Attach hamburger event listeners
+    const hamburger = document.getElementById('hamburger');
+    const mainNav = document.getElementById('mainNav');
+    const backdrop = document.getElementById('nav-backdrop');
+    if (hamburger && mainNav && backdrop) {
+      hamburger.addEventListener('click', function(e) {
+        e.stopPropagation();
+        hamburger.classList.toggle('active');
+        mainNav.classList.toggle('active');
+        backdrop.classList.toggle('active');
+      });
+      backdrop.addEventListener('click', function() {
+        hamburger.classList.remove('active');
+        mainNav.classList.remove('active');
+        backdrop.classList.remove('active');
+      });
+      mainNav.querySelectorAll('a').forEach(link => {
+        link.addEventListener('click', () => {
+          hamburger.classList.remove('active');
+          mainNav.classList.remove('active');
+          backdrop.classList.remove('active');
+        });
+      });
+    }
+  });
+</script>
     <!-- Add margin-top to container to account for fixed nav -->
     <div class="container" style="margin-top: 90px;">
         <div class="login-section" role="status" aria-live="polite">
