--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - College Sports Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="nav.js"></script>
@@ -39,53 +39,53 @@
             // Add smooth scrolling to navigation
             const nav = document.querySelector('.main-nav');
             if (nav) {
-                let isDown = false;
-                let startX;
-                let scrollLeft;
+            let isDown = false;
+            let startX;
+            let scrollLeft;
 
-                nav.addEventListener('mousedown', (e) => {
-                    isDown = true;
-                    nav.style.cursor = 'grabbing';
-                    startX = e.pageX - nav.offsetLeft;
-                    scrollLeft = nav.scrollLeft;
-                });
+            nav.addEventListener('mousedown', (e) => {
+                isDown = true;
+                nav.style.cursor = 'grabbing';
+                startX = e.pageX - nav.offsetLeft;
+                scrollLeft = nav.scrollLeft;
+            });
 
-                nav.addEventListener('mouseleave', () => {
-                    isDown = false;
-                    nav.style.cursor = 'grab';
-                });
+            nav.addEventListener('mouseleave', () => {
+                isDown = false;
+                nav.style.cursor = 'grab';
+            });
 
-                nav.addEventListener('mouseup', () => {
-                    isDown = false;
-                    nav.style.cursor = 'grab';
-                });
+            nav.addEventListener('mouseup', () => {
+                isDown = false;
+                nav.style.cursor = 'grab';
+            });
 
-                nav.addEventListener('mousemove', (e) => {
-                    if (!isDown) return;
-                    e.preventDefault();
-                    const x = e.pageX - nav.offsetLeft;
-                    const walk = (x - startX) * 2;
-                    nav.scrollLeft = scrollLeft - walk;
-                });
+            nav.addEventListener('mousemove', (e) => {
+                if (!isDown) return;
+                e.preventDefault();
+                const x = e.pageX - nav.offsetLeft;
+                const walk = (x - startX) * 2;
+                nav.scrollLeft = scrollLeft - walk;
+            });
 
-                // Touch events for mobile
-                nav.addEventListener('touchstart', (e) => {
-                    isDown = true;
-                    startX = e.touches[0].pageX - nav.offsetLeft;
-                    scrollLeft = nav.scrollLeft;
-                });
+            // Touch events for mobile
+            nav.addEventListener('touchstart', (e) => {
+                isDown = true;
+                startX = e.touches[0].pageX - nav.offsetLeft;
+                scrollLeft = nav.scrollLeft;
+            });
 
-                nav.addEventListener('touchend', () => {
-                    isDown = false;
-                });
+            nav.addEventListener('touchend', () => {
+                isDown = false;
+            });
 
-                nav.addEventListener('touchmove', (e) => {
-                    if (!isDown) return;
-                    e.preventDefault();
-                    const x = e.touches[0].pageX - nav.offsetLeft;
-                    const walk = (x - startX) * 2;
-                    nav.scrollLeft = scrollLeft - walk;
-                });
+            nav.addEventListener('touchmove', (e) => {
+                if (!isDown) return;
+                e.preventDefault();
+                const x = e.touches[0].pageX - nav.offsetLeft;
+                const walk = (x - startX) * 2;
+                nav.scrollLeft = scrollLeft - walk;
+            });
             }
         });
     </script>
@@ -693,40 +693,8 @@
         }
     </style>
 </head>
-<body onload="checkLogin()">
+<body onload="checkLogin()" style="margin: 0; padding: 0;">
     <div id="nav-placeholder"></div>
-    <script>
-    fetch('nav.html')
-      .then(r => r.text())
-      .then(d => {
-        document.getElementById('nav-placeholder').innerHTML = d;
-        // Attach hamburger event listeners
-        const hamburger = document.getElementById('hamburger');
-        const mainNav = document.getElementById('mainNav');
-        const backdrop = document.getElementById('nav-backdrop');
-        if (hamburger && mainNav && backdrop) {
-          hamburger.addEventListener('click', function(e) {
-            e.stopPropagation();
-            hamburger.classList.toggle('active');
-            mainNav.classList.toggle('active');
-            backdrop.classList.toggle('active');
-          });
-          backdrop.addEventListener('click', function() {
-            hamburger.classList.remove('active');
-            mainNav.classList.remove('active');
-            backdrop.classList.remove('active');
-          });
-          mainNav.querySelectorAll('a').forEach(link => {
-            link.addEventListener('click', () => {
-              hamburger.classList.remove('active');
-              mainNav.classList.remove('active');
-              backdrop.classList.remove('active');
-            });
-          });
-        }
-      });
-    </script>
-
     <div class="container">
         <h1>Contact Us</h1>
         
