--- a/nav.html
+++ b/nav.html
@@ -3,11 +3,6 @@
     <div class="logo">
         <img src="logo.jpg" alt="College Sports Hub Logo">
     </div>
-    <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
     <ul class="main-nav" id="mainNav">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -17,220 +12,7 @@
         <li><a href="rules.html">Rules</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="details.html">Details</a></li>
-        <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
+        <li><a href="#" onclick="logout()" id="logoutNav" style="display: none;">Logout</a></li>
     </ul>
 </nav>
-<div id="nav-backdrop"></div>
-
-<style>
-    /* Navigation Bar */
-    nav {
-        background-color: #00274D;
-        color: white;
-        padding: 15px 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
-        z-index: 1000;
-        height: 130px !important;
-        min-height: 130px !important;
-        padding-top: 0 !important;
-        padding-bottom: 0 !important;
-    }
-
-    .logo {
-        height: 120px !important;
-        max-height: 120px !important;
-        width: auto;
-        display: flex;
-        align-items: center;
-        flex-shrink: 0;
-        margin-right: 10px;
-    }
-
-    .logo img {
-        height: 120px !important;
-        max-height: 120px !important;
-        width: auto;
-        max-width: 100%;
-        object-fit: contain;
-    }
-
-    .main-nav {
-        display: flex;
-        gap: 20px;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    .main-nav a {
-        text-decoration: none;
-        color: white;
-        font-size: 16px;
-        padding: 10px 15px;
-        border-radius: 5px;
-        transition: 0.3s;
-    }
-
-    .main-nav a:hover {
-        background-color: #004080;
-    }
-
-    .main-nav a.active {
-        background-color: #004080;
-    }
-
-    /* Hamburger Menu */
-    .hamburger {
-        display: none;
-        cursor: pointer;
-        padding: 10px;
-        z-index: 10001;
-    }
-
-    .hamburger span {
-        display: block;
-        width: 25px;
-        height: 3px;
-        background-color: white;
-        margin: 5px 0;
-        transition: all 0.3s ease;
-    }
-
-    .hamburger-menu {
-        display: none;
-        position: absolute;
-        top: 70px;
-        right: 20px;
-        background: #00274D;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 5px;
-        z-index: 999;
-    }
-
-    .hamburger-menu.active {
-        display: block;
-    }
-
-    .hamburger-menu a {
-        display: block;
-        padding: 15px 20px;
-        color: white;
-        text-decoration: none;
-        transition: 0.3s;
-    }
-
-    .hamburger-menu a:hover {
-        background: #00509E;
-    }
-
-    @media (max-width: 900px) {
-        nav {
-            padding: 0.5rem 1rem;
-            height: auto !important;
-            min-height: auto !important;
-        }
-
-        .logo, .logo img {
-            height: 100px !important;
-            max-height: 100px !important;
-        }
-
-        .hamburger {
-            display: block;
-            position: absolute;
-            right: 20px;
-            top: 20px;
-        }
-
-        .main-nav {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            right: 0;
-            background-color: #00274D;
-            padding: 1rem;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .main-nav.active {
-            display: flex;
-        }
-
-        .main-nav li {
-            width: 100%;
-            text-align: center;
-        }
-
-        .main-nav a {
-            display: block;
-            padding: 0.8rem;
-            width: 100%;
-        }
-
-        /* Hamburger Animation */
-        .hamburger.active span:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
-        }
-
-        .hamburger.active span:nth-child(2) {
-            opacity: 0;
-        }
-
-        .hamburger.active span:nth-child(3) {
-            transform: rotate(-45deg) translate(7px, -6px);
-        }
-    }
-
-    @media (max-width: 600px) {
-        .logo, .logo img {
-            height: 80px !important;
-            max-height: 80px !important;
-        }
-    }
-
-    body {
-        margin-top: 0;
-    }
-</style>
-
-<script>
-function toggleMenu() {
-    const nav = document.getElementById('mainNav');
-    const backdrop = document.getElementById('nav-backdrop');
-    nav.classList.toggle('active');
-    backdrop.classList.toggle('active');
-}
-
-// Close menu when clicking outside
-document.addEventListener('click', function(event) {
-    const nav = document.getElementById('mainNav');
-    const hamburger = document.getElementById('hamburger');
-    const backdrop = document.getElementById('nav-backdrop');
-    
-    if (!nav.contains(event.target) && !hamburger.contains(event.target)) {
-        nav.classList.remove('active');
-        backdrop.classList.remove('active');
-    }
-});
-
-// Set active link based on current page
-document.addEventListener('DOMContentLoaded', function() {
-    const currentPage = window.location.pathname.split('/').pop();
-    const navLinks = document.querySelectorAll('.main-nav a');
-    
-    navLinks.forEach(link => {
-        if (link.getAttribute('href') === currentPage) {
-            link.classList.add('active');
-        } else {
-            link.classList.remove('active');
-        }
-    });
-});
-</script> 
+<div id="nav-backdrop"></div>   
