--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - College Sports Hub</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav.css">
     <script src="nav.js"></script>
     <script src="common.js"></script>
@@ -36,147 +36,6 @@
             line-height: 1.6;
         }
 
-        /* Navigation Bar */
-        nav {
-            background-color: #0a2342;
-            color: white;
-            padding: 0 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 90px !important;
-            min-height: 90px !important;
-            border-bottom: 1px solid #e0e6ed;
-            position: relative;
-            z-index: 1000;
-            box-shadow: none;
-        }
-
-        .logo {
-            height: 60px;
-            width: auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-shrink: 0;
-            margin-right: 10px;
-            transition: none;
-        }
-
-        .logo img {
-            height: 60px;
-            width: auto;
-            max-width: 100%;
-            object-fit: contain;
-        }
-
-        /* Main Navigation Links */
-        .main-nav {
-            display: flex;
-            gap: 0.5rem;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            flex-shrink: 0;
-            align-items: center;
-        }
-
-        .main-nav a {
-            text-decoration: none;
-            color: #f4f6fa;
-            font-size: 1rem;
-            padding: 0.7rem 1.1rem;
-            border-radius: 0.2rem;
-            transition: background 0.2s, color 0.2s;
-            white-space: nowrap;
-            display: block;
-            position: relative;
-            font-weight: 500;
-            letter-spacing: 0.2px;
-        }
-
-        .main-nav a:hover {
-            background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
-            transform: none;
-        }
-
-        .main-nav a.active {
-            background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
-        }
-
-        .main-nav a.active::after {
-            display: none;
-        }
-
-        /* Mobile Navigation Styles */
-        @media (max-width: 900px) {
-            nav {
-                flex-direction: column;
-                height: auto !important;
-                min-height: auto !important;
-                padding: 0.5rem;
-                position: relative;
-            }
-            .logo {
-                margin-bottom: 0.5rem;
-            }
-            .main-nav {
-                width: 100%;
-                overflow-x: auto;
-                overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                padding: 0.5rem 0;
-                justify-content: flex-start;
-                gap: 0.2rem;
-                scrollbar-width: none; /* Firefox */
-                -ms-overflow-style: none; /* IE and Edge */
-                display: flex;
-                flex-wrap: nowrap;
-                white-space: nowrap;
-            }
-            .main-nav::-webkit-scrollbar {
-                display: none; /* Chrome, Safari, Opera */
-            }
-            .main-nav li {
-                flex: 0 0 auto;
-                display: inline-block;
-            }
-            .main-nav a {
-                padding: 0.5rem 0.8rem;
-                font-size: 0.95rem;
-                background-color: transparent;
-                border-radius: 12px;
-                display: inline-block;
-            }
-            .main-nav a:hover, .main-nav a.active {
-                background-color: #17335c;
-                color: #e0e6ed;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .main-nav a {
-                padding: 0.3rem 0.5rem;
-                font-size: 0.85rem;
-            }
-        }
-
-        #nav-backdrop {
-            display: none;
-            position: fixed;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.3);
-            z-index: 1099;
-        }
-
-        #nav-backdrop.active {
-            display: block;
-        }
-
         /* Section Styling */
         .section-container {
             background: rgba(255, 255, 255, 0.9);
@@ -199,13 +58,13 @@
             width: 100%;
             max-width: 600px;
             border-radius: 10px;
-            display: block;
             margin: 20px auto;
+            display: block;
         }
 
         .section-container p {
-            font-size: 18px;
-            margin-bottom: 20px;
+            margin: 15px 0;
+            line-height: 1.8;
         }
 
         /* Footer */
@@ -216,156 +75,9 @@
             text-align: center;
             margin-top: 30px;
         }
-
-        /* Responsive Design */
-        @media (max-width: 1200px) {
-            .section-container {
-                width: 85%;
-                padding: 35px;
-                margin: 40px auto;
-            }
-
-            .section-container p {
-                font-size: 17px;
-            }
-        }
-
-        @media (max-width: 992px) {
-            .section-container {
-                width: 90%;
-                padding: 30px;
-                margin: 35px auto;
-            }
-
-            .section-container h2 {
-                font-size: 24px;
-                margin-bottom: 15px;
-            }
-
-            .section-container p {
-                font-size: 16px;
-                margin-bottom: 15px;
-            }
-
-            .section-container img {
-                margin: 15px auto;
-            }
-        }
-
-        @media (max-width: 768px) {
-            nav {
-                padding: 10px 15px;
-            }
-
-            .logo {
-                height: 50px;
-            }
-
-            .logo img {
-                height: 50px;
-            }
-
-            .section-container {
-                width: 95%;
-                padding: 25px;
-                margin: 30px auto;
-            }
-
-            .section-container h2 {
-                font-size: 22px;
-                margin-bottom: 12px;
-            }
-
-            .section-container p {
-                font-size: 15px;
-                margin-bottom: 12px;
-            }
-
-            .section-container img {
-                margin: 12px auto;
-            }
-        }
-
-        @media (max-width: 576px) {
-            nav {
-                padding: 8px 12px;
-            }
-
-            .logo {
-                height: 40px;
-            }
-
-            .logo img {
-                height: 40px;
-            }
-
-            .section-container {
-                width: 98%;
-                padding: 20px;
-                margin: 25px auto;
-            }
-
-            .section-container h2 {
-                font-size: 20px;
-                margin-bottom: 10px;
-            }
-
-            .section-container p {
-                font-size: 14px;
-                margin-bottom: 10px;
-            }
-
-            .section-container img {
-                margin: 10px auto;
-            }
-
-            footer {
-                padding: 12px;
-                font-size: 14px;
-            }
-        }
-
-        @media (max-width: 400px) {
-            nav {
-                padding: 6px 10px;
-            }
-
-            .logo {
-                height: 35px;
-            }
-
-            .logo img {
-                height: 35px;
-            }
-
-            .section-container {
-                padding: 15px;
-                margin: 20px auto;
-            }
-
-            .section-container h2 {
-                font-size: 18px;
-                margin-bottom: 8px;
-            }
-
-            .section-container p {
-                font-size: 13px;
-                margin-bottom: 8px;
-            }
-
-            .section-container img {
-                margin: 8px auto;
-            }
-
-            footer {
-                padding: 10px;
-                font-size: 13px;
-                color:white
-            }
-        }
     </style>
 </head>
-<body onload="checkLogin()" style="margin: 0; padding: 0;">
+<body onload="checkLogin()">
     <div id="nav-placeholder"></div>
 
     <!-- About Us Section -->
