--- a/rules.html
+++ b/rules.html
@@ -27,318 +27,45 @@
         }
     </script>
     <style>
-        /* Remove nav and body padding/margin rules here. Let nav.css handle it. */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background: url('images/background.jpg') no-repeat center center/cover;
             text-align: center;
-        }
-
-        /* Navigation Bar */
-        nav {
-            background-color: #0a2342;
             color: white;
-            padding: 0 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 90px !important;
-            min-height: 90px !important;
-            border-bottom: 1px solid #e0e6ed;
-            position: relative;
-            z-index: 1000;
-            box-shadow: none;
+            line-height: 1.6;
         }
 
-        .logo {
-            height: 60px;
-            width: auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-shrink: 0;
-            margin-right: 10px;
-            transition: none;
+        /* Section Styling */
+        .section-container {
+            background: rgba(255, 255, 255, 0.9);
+            color: black;
+            padding: 40px;
+            margin: 50px auto;
+            width: 80%;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: justify;
         }
 
-        .logo img {
-            height: 60px;
-            width: auto;
-            max-width: 100%;
-            object-fit: contain;
+        .section-container h2 {
+            color: blue;
+            text-align: center;
+            margin-bottom: 20px;
         }
 
-        .main-nav {
-            display: flex;
-            gap: 0.5rem;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            flex-shrink: 0;
-            align-items: center;
-        }
-
-        .main-nav a {
-            text-decoration: none;
-            color: #f4f6fa;
-            font-size: 1rem;
-            padding: 0.7rem 1.1rem;
-            border-radius: 0.2rem;
-            transition: background 0.2s, color 0.2s;
-            white-space: nowrap;
-            display: block;
-            position: relative;
-            font-weight: 500;
-            letter-spacing: 0.2px;
-        }
-
-        .main-nav a:hover {
-            background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
-            transform: none;
-        }
-
-        .main-nav a.active {
-            background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
-        }
-
-        .main-nav a.active::after {
-            display: none;
-        }
-
-        .hamburger {
-            display: none;
-            flex-direction: column;
-            gap: 6px;
-            cursor: pointer;
-            margin-left: 20px;
-            width: 44px;
-            height: 44px;
-            justify-content: center;
-            align-items: center;
-            z-index: 1100;
-        }
-
-        .hamburger span {
-            display: block;
-            width: 32px;
-            height: 4px;
-            background: white;
-            border-radius: 2px;
-            transition: 0.3s;
-        }
-
-        @media (max-width: 900px) {
-            nav {
-                flex-direction: column;
-                height: auto !important;
-                min-height: auto !important;
-                padding: 0.5rem;
-            }
-            .logo {
-                margin-bottom: 0.5rem;
-            }
-            .main-nav {
-                width: 100%;
-                overflow-x: auto;
-                overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                padding: 0.5rem 0;
-                justify-content: flex-start;
-                gap: 0.2rem;
-                scrollbar-width: none;
-                -ms-overflow-style: none;
-            }
-            .main-nav::-webkit-scrollbar {
-                display: none;
-            }
-            .main-nav li {
-                flex: 0 0 auto;
-            }
-            .main-nav a {
-                padding: 0.5rem 0.8rem;
-                font-size: 0.95rem;
-                background-color: transparent;
-                border-radius: 12px;
-            }
-            .main-nav a:hover, .main-nav a.active {
-                background-color: #17335c;
-                color: #e0e6ed;
-            }
-        }
-        @media (max-width: 480px) {
-            .main-nav a {
-                padding: 0.3rem 0.5rem;
-                font-size: 0.85rem;
-            }
-        }
-        #nav-backdrop {
-            display: none;
-            position: fixed;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.3);
-            z-index: 1099;
-        }
-        #nav-backdrop.active {
+        .section-container img {
+            width: 100%;
+            max-width: 600px;
+            border-radius: 10px;
+            margin: 20px auto;
             display: block;
         }
-        @media (max-width: 1200px) {
-            .container {
-                width: 85%;
-                margin: 40px auto;
-                padding: 18px;
-            }
 
-            ul {
-                font-size: 17px;
-            }
-        }
-
-        @media (max-width: 992px) {
-            .container {
-                width: 90%;
-                margin: 35px auto;
-                padding: 16px;
-            }
-
-            h1 {
-                font-size: 28px;
-            }
-
-            h2 {
-                font-size: 24px;
-            }
-
-            ul {
-                font-size: 16px;
-            }
-
-            .btn {
-                padding: 8px 16px;
-                font-size: 15px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            nav {
-                padding: 10px 15px;
-            }
-
-            .logo {
-                height: 70px;
-            }
-
-            .logo img {
-                height: 70px;
-            }
-
-            .container {
-                width: 95%;
-                margin: 30px auto;
-                padding: 14px;
-            }
-
-            h1 {
-                font-size: 26px;
-            }
-
-            h2 {
-                font-size: 22px;
-            }
-
-            ul {
-                font-size: 15px;
-                padding-left: 25px;
-            }
-
-            .btn {
-                padding: 7px 14px;
-                font-size: 14px;
-            }
-        }
-
-        @media (max-width: 576px) {
-            nav {
-                padding: 8px 12px;
-            }
-
-            .logo {
-                height: 60px;
-            }
-
-            .logo img {
-                height: 60px;
-            }
-
-            .container {
-                width: 98%;
-                margin: 25px auto;
-                padding: 12px;
-            }
-
-            h1 {
-                font-size: 24px;
-            }
-
-            h2 {
-                font-size: 20px;
-            }
-
-            ul {
-                font-size: 14px;
-                padding-left: 20px;
-                line-height: 1.5;
-            }
-
-            .btn {
-                padding: 6px 12px;
-                font-size: 13px;
-            }
-        }
-
-        @media (max-width: 400px) {
-            nav {
-                padding: 6px 10px;
-            }
-
-            .logo {
-                height: 50px;
-            }
-
-            .logo img {
-                height: 50px;
-            }
-
-            .container {
-                width: 100%;
-                margin: 20px auto;
-                padding: 10px;
-                border-radius: 8px;
-            }
-
-            h1 {
-                font-size: 22px;
-            }
-
-            h2 {
-                font-size: 18px;
-            }
-
-            ul {
-                font-size: 13px;
-                padding-left: 15px;
-                line-height: 1.4;
-            }
-
-            .btn {
-                padding: 5px 10px;
-                font-size: 12px;
-            }
+        .section-container p {
+            margin: 15px 0;
+            line-height: 1.8;
         }
 
         .container {
